--- a/keymapping.json
+++ b/keymapping.json
@@ -35,6 +35,26 @@
     "command": "selectPrevSuggestion",
     "when": "suggestWidgetVisible"
 },
+{
+    "key": "ctrl+,",
+    "command": "workbench.action.decreaseViewWidth",
+    "when": "editorTextFocus && vim.active && vim.mode != 'Insert'"
+},
+{
+    "key": "ctrl+.",
+    "command": "workbench.action.increaseViewWidth",
+    "when": "editorTextFocus && vim.active && vim.mode != 'Insert'"
+},
+{
+    "key": "ctrl+shift+,",
+    "command": "workbench.action.decreaseViewHeight",
+    "when": "editorTextFocus && vim.active && vim.mode != 'Insert'"
+},
+{
+    "key": "ctrl+shift+.",
+    "command": "workbench.action.increaseViewHeight",
+    "when": "editorTextFocus && vim.active && vim.mode != 'Insert'"
+},
 //
 // FILE EXPLORER NAVIGATION SHORTCUTS
 //
