--- a/keymapping.json
+++ b/keymapping.json
@@ -1,3 +1,15 @@
+// Place your key bindings in this file to override the defaultsauto[]
+[
+{
+    "key": "ctrl+shift+alt+=",
+    "command": "workbench.action.files.showOpenedFileInNewWindow",
+    "when": "emptyWorkspaceSupport"
+},
+{
+    "key": "cmd+k o",
+    "command": "-workbench.action.files.showOpenedFileInNewWindow",
+    "when": "emptyWorkspaceSupport"
+},
 /// My setting
 {
     // "ctrl+h": Focuses on the left editor group when the text editor is focused, Vim extension is active, and Vim is not in Insert mode
@@ -35,6 +47,7 @@
     "command": "selectPrevSuggestion",
     "when": "suggestWidgetVisible"
 },
+/// set editor width and height
 {
     "key": "ctrl+,",
     "command": "workbench.action.decreaseViewWidth",
@@ -140,6 +153,7 @@
     "command": "workbench.action.quickOpenSelectPrevious",
     "when": "inQuickOpen"
 },
+// Set side bar
 {
     "key": "escape",
     "command": "runCommands",
@@ -164,3 +178,4 @@
     "key": "ctrl+shift+]",
     "command": "workbench.action.nextEditor"
 },
+]
